fix(sidebar): reduce ridiculous z-index values

--- a/style/modules/_sidebar.scss
+++ b/style/modules/_sidebar.scss
@@ -2,7 +2,7 @@
 
 .side,
 .side * {
-	z-index: 99999;
+	z-index: 999;
 }
 
 .res-nightmode .side,
